# fintablo-api

./: .gitignore  FinTablo-v1-swagger.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_usage.py  datetime_usage.py  model_usage.py  query_examples.py
fintablo_api/: __init__.py  base.py  client.py  exceptions.py  http_client.py  logging_utils.py  models.py
fintablo_api/repositories/: __init__.py  accounts.py  categories.py  deals.py  moneybags.py  partners.py  transactions.py
tests/: test_client.py  test_repositories.py
